# hwmultd

./: .gitignore  Makefile.am  README  README.md  TODO  configure.ac
doc/: Makefile.am  hwmultd.8  hwmultd.pod  make.sh  tempmond.man
etc/: Makefile.am  entropy_cl.conf  example_cl.conf  example_hw.conf  hwmultd.conf  libentropy_hw.conf  libscript_cl.conf  libtemp_hw.conf  script_cl.conf  script_hw.conf
etc/scripts/: Makefile.am  null.sh  shutdown_cl.sh  test.sh  test_cl.sh  test_hw.sh
include/: Makefile.am  clcommon.h  hwcommon.h
plugins/: Makefile.am  README  clcommon.h  common.h  entropy_cl.c  entropy_hw.c  example_cl.c  example_hw.c  hwcommon.h  libentropy_cl.c  libentropy_hw.c  libexample_cl.c  libexample_hw.c  libnull_cl.c  libnull_hw.c  libscript_cl.c  libscript_hw.c  libtemp_hw.c  libtime_hw.c  null_cl.c  null_hw.c  script_cl.c  script_hw.c  temp_hw.c  time_hw.c
src/: Makefile.am  cmdargs.c  cmdargs.h  hwmultd.c  log.c  log.h  mcast.h  mclient.c  mserver.c  mserver.h  pidfile.c  pidfile.h  plugins.c  plugins.h  service.c  service.h  signalhandler.c  signalhandler.h  tempmond.c
